--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,14 +9,21 @@ jobs:
     steps:
       - name: get resources and apply patch
         run: |
+          sudo apt build-dep mesa -y
+          sudo mkdir /data
+          chmod 777 /data
+          mkdir /data/data/
+          mkdir /data/data/com.termux
+          mkdir /data/data/com.termux/files/
+          mkdir /data/data/com.termux/files/usr
+          mkdir /data/data/com.termux/files/usr/glibc
           git clone https://github.com/Waim908/mesa_driver_glibc.git patch
           git clone -b mesa-25.1.0 https://gitlab.freedesktop.org/mesa/mesa.git mesa
           . patch/patchelf.sh
           wget -O /tmp/glibc.tar.xz https://github.com/Waim908/lite-termux-glibc/releases/download/nodownload/Lite-glibc-2.41-1.tar.xz 
           tar -xf /tmp/glibc/tar.xz -C /data/data/com.termux/usr/
           sudo sed -i '/deb-src/s/^# //' /etc/apt/sources.list && apt update
-          sudo apt install patchelf ninja meson cmake
-          sudo apt build-dep mesa
+          sudo apt install patchelf ninja meson cmake -y
           cd mesa
           patch_dir=v25
           for patch in ../patch/$patch_dir/*.patch; do
