--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,6 +9,7 @@ jobs:
     steps:
       - name: get resources and apply patch
         run: |
+          sudo bash -c 'cp /etc/apt/sources.list /etc/apt/sources.list.bak && echo -e "deb https://mirrors.aliyun.com/ubuntu-ports/ jammy main restricted universe multiverse\ndeb-src https://mirrors.aliyun.com/ubuntu-ports/ jammy main restricted universe multiverse\ndeb https://mirrors.aliyun.com/ubuntu-ports/ jammy-security main restricted universe multiverse\ndeb-src https://mirrors.aliyun.com/ubuntu-ports/ jammy-security main restricted universe multiverse\ndeb https://mirrors.aliyun.com/ubuntu-ports/ jammy-updates main restricted universe multiverse\ndeb-src https://mirrors.aliyun.com/ubuntu-ports/ jammy-updates main restricted universe multiverse\n# deb https://mirrors.aliyun.com/ubuntu-ports/ jammy-proposed main restricted universe multiverse\n# deb-src https://mirrors.aliyun.com/ubuntu-ports/ jammy-proposed main restricted universe multiverse\ndeb https://mirrors.aliyun.com/ubuntu-ports/ jammy-backports main restricted universe multiverse\ndeb-src https://mirrors.aliyun.com/ubuntu-ports/ jammy-backports main restricted universe multiverse" > /etc/apt/sources.list'
           sudo apt build-dep mesa -y
           sudo mkdir /data
           chmod 777 /data
@@ -37,11 +38,24 @@ jobs:
           done
       - name: meson configure
         run: |
-          meson setup builddir -Dprefix=/tmp/build -Dbuildtype=release -Dplatforms=x11,wayland -Dgallium-drivers=freedreno,virgl,zink,panfrost,llvmpipe -Dvulkan-drivers=freedreno,panfrost,swrast,virtio -Degl=enabled -Dgles1=disabled -Dgles2=enabled -Dglvnd=enabled -Dglx=dri -Dllvm=enabled -Dgallium-extra-hud=true -Dgallium-va=enabled -Dgallium-vdpau=enabled -Dgbm=enabled -Dvulkan-layers=device-select,overlay -Dfreedreno-kmds=kgsl -Dlibunwind=disabled -Dvalgrind=disabled -Dmicrosoft-clc=disabled
+          meson setup builddir -Dprefix=/tmp/glibc -Dbuildtype=release -Dplatforms=x11,wayland -Dgallium-drivers=freedreno,virgl,zink,panfrost,llvmpipe -Dvulkan-drivers=freedreno,panfrost,swrast,virtio -Degl=enabled -Dgles1=disabled -Dgles2=enabled -Dglvnd=enabled -Dglx=dri -Dllvm=enabled -Dgallium-extra-hud=true -Dgallium-va=enabled -Dgallium-vdpau=enabled -Dgbm=enabled -Dvulkan-layers=device-select,overlay -Dfreedreno-kmds=kgsl -Dlibunwind=disabled -Dvalgrind=disabled -Dmicrosoft-clc=disabled
       - name: meson compile & install
         run: |
           meson compile -C builddir && meson install -C builddir
-      
+          cd /tmp
+          tar -I 'xz -T$(nproc)' -cvf /tmp/mesa-25.1.0.tar.xz glibc/
+      - name: package and release
+        uses: softprops/action-gh-release@v2
+        with:
+          name: mesa-25.1.0
+          draft: false
+          prerelease: false
+          tag_name: mesa-25.1.0
+          body: panfrost turnip llvmpipe virgl virtio
+          files: |
+            /tmp/mesa-25.1.0.tar.xz
+        env:
+          GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
           
 
 
