--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -42,7 +42,7 @@ jobs:
       - name: meson compile & install
         run: |
           meson compile -C builddir && meson install -C builddir
-          cd /tmp
+          cd /tmp && cd glibc && patchelf_glibc 
           tar -I 'xz -T$(nproc)' -cvf /tmp/mesa-25.1.0.tar.xz glibc/
       - name: package and release
         uses: softprops/action-gh-release@v2
