--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -19,16 +19,17 @@ jobs:
           mkdir /data/data/com.termux/files/
           mkdir /data/data/com.termux/files/usr
           mkdir /data/data/com.termux/files/usr/glibc
+          cd /tmp
           git clone https://github.com/Waim908/mesa_driver_glibc.git patch
           git clone -b mesa-25.1.0 https://gitlab.freedesktop.org/mesa/mesa.git mesa
           . patch/patchelf.sh
           wget -O /tmp/glibc.tar.xz https://github.com/Waim908/lite-termux-glibc/releases/download/nodownload/Lite-glibc-2.41-1.tar.xz 
           tar -xf /tmp/glibc.tar.xz -C /data/data/com.termux/files/usr/
           sudo apt install patchelf ninja-build meson cmake -y
-          cd mesa
+          cd /tmp/mesa
           patch_dir=v25
-          for patch in ../patch/$patch_dir/*.patch; do
-            if ! patch -p1 < ../patch/$patch_dir/$patch ; then
+          for patch in /tmp/patch/$patch_dir/*.patch; do
+            if ! patch -p1 < /tmp/patch/$patch_dir/$patch ; then
               echo "$patch 应用失败!"
               exit 1
               break
@@ -56,8 +57,3 @@ jobs:
             /tmp/mesa-25.1.0.tar.xz
         env:
           GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
-          
-
-
-
-
