--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,19 +21,20 @@ jobs:
           mkdir /data/data/com.termux/files/usr/glibc
           cd /tmp
           git clone https://github.com/Waim908/mesa_driver_glibc.git patch
-          git clone -b mesa-25.1.0 https://gitlab.freedesktop.org/mesa/mesa.git mesa
+          git clone -b mesa-25.2.0 https://gitlab.freedesktop.org/mesa/mesa.git mesa
           . patch/patchelf.sh
           wget -O /tmp/glibc.tar.xz https://github.com/Waim908/lite-termux-glibc/releases/download/nodownload/Lite-glibc-2.41-1.tar.xz 
           tar -xf /tmp/glibc.tar.xz -C /data/data/com.termux/files/usr/
           sudo apt install patchelf ninja-build meson cmake -y
           cd /tmp/mesa
-          for i in /tmp/patch/v25/*.patch; do
+          for i in /tmp/patch/v25.2/*.patch; do
+            echo "应用补丁：$1"
             if ! patch -p1 < "$i" ; then
               echo "$i 应用失败!"
               exit 1
               break
             else
-              echo "$i :Done"
+              echo "$i: Done"
             fi
           done
       - name: meson configure
@@ -47,12 +48,12 @@ jobs:
       - name: package and release
         uses: softprops/action-gh-release@v2
         with:
-          name: mesa-25.1.0
+          name: mesa-25.2.0
           draft: false
           prerelease: false
-          tag_name: mesa-25.1.0
+          tag_name: mesa-25.2.0
           body: panfrost turnip llvmpipe virgl virtio
           files: |
-            /tmp/mesa-25.1.0.tar.xz
+            /tmp/mesa-25.2.0.tar.xz
         env:
           GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
